k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: users-strip         
  namespace: users
spec:
  stripPrefix:
    prefixes:
      - /api/users
    forceSlash: false
