k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: users
  labels:
    app: users
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: users
